src/acl/snapshots/portail__acl__parser__tests__invalid_integer_in_regexp_operand.snap
---
source: src/acl/parser.rs
expression: result.unwrap_err()
---
error: Failure to parse the ACL rules
  |
1 |
2 |             policy bad_expr {
3 |                 require role =~ 2350
  |                                 ^ invalid string literal
4 |             }
5 |         
  |
