src/acl/snapshots/portail__acl__parser__tests__invalid_policy_missing_brace.snap
---
source: src/acl/parser.rs
expression: result.unwrap_err()
---
error: Failure to parse the ACL rules
  |
1 |
2 |             policy no_action {
3 |                 require role == "user"
4 |         
  |         ^ invalid policy block
