src/acl/snapshots/portail__acl__parser__tests__invalid_regexp_in_operand.snap
---
source: src/acl/parser.rs
expression: result.unwrap_err()
---
error: Failure to parse the ACL rules
  |
1 |
2 |               policy bad_expr {
3 |                   require role =~ "*"
  |  ____________________________________^
4 | |             }
  | |_^ invalid right regex operand
regex parse error:
    *
    ^
error: repetition operator missing expression
5 |           
  |
