src/acl/snapshots/portail__acl__parser__tests__invalid_route_missing_opening_brace.snap
---
source: src/acl/parser.rs
expression: result.unwrap_err()
---
error: Failure to parse the ACL rules
  |
1 |
2 |             route main
3 |                 use ["exit1"]
  |                 ^ invalid route definition
4 |         
  |
