src/acl/snapshots/portail__acl__parser__tests__invalid_uri_in_redirect.snap
---
source: src/acl/parser.rs
expression: result.unwrap_err()
---
error: Failure to parse the ACL rules
  |
1 |
2 |             policy goaway {
3 |                 action redirect "https:?"
  |                                ^ invalid URI
4 |             }
5 |         
  |
